# resume-builder-new

./: .firebaserc  docker-compose.yml
ResumeBuilderNew/: .gitignore  BUILD_PLAN.md  README.md
ResumeBuilderNew/backend/: .env.example  pyproject.toml
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0a9baceeb93d_increase_external_id_length.py  56dfc965bdb4_fix_external_id_and_url_length.py  d49ad1dd2796_initial_schema.py
backend/app/: main.py  models.py
backend/app/auth/: deps.py  models.py  router.py  schemas.py  service.py
backend/app/common/: audit.py  config.py  db.py  errors.py  security.py  storage.py
backend/app/export/: docx.py  pdf.py  router.py  schemas.py
backend/app/jobs/: models.py  router.py  schemas.py  service.py
backend/app/llm/: adapter.py  prompts.py
backend/app/resumes/: models.py  parser.py  router.py  schemas.py  service.py
backend/app/scoring/: engine.py
backend/app/search/: adapter.py
backend/app/tailor/: models.py  router.py  schemas.py  service.py
backend/app/workers/: celery_app.py  pipeline.py
backend/scripts/: init_db.py
backend/tests/: conftest.py  test_auth.py  test_export.py  test_jobs.py  test_resumes.py  test_scoring.py  test_tailor.py
diagnosis-mapping-2/: requirements.txt
diagnosis-mapping-2/data/: medicines_clean.csv
diagnosis-mapping-2/scripts/: generate_embeddings.py  preprocess.py
frontend/: .firebaserc  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
(+15 files in other folders)
