[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "resumebuilder-backend"
version = "0.1.0"
description = "Resume tailoring + transparent ATS scoring API"
requires-python = ">=3.10,<4.0"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic[email]>=2.7",
    "pydantic-settings>=2.3",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "psycopg[binary]>=3.2",
    "celery>=5.4",
    "redis>=5.0",
    "httpx>=0.27",
    "python-jose[cryptography]>=3.3",
    "bcrypt>=4.1",
    "python-multipart>=0.0.9",
    "pypdf>=4.2",
    "docx2txt>=0.8",
    "python-docx>=1.1",
    "reportlab>=4.2",
    "slowapi>=0.1.9",
    "pytesseract (>=0.3.13,<0.4.0)",
    "pillow (>=12.2.0,<13.0.0)",
    "pdf2image (>=1.17.0,<2.0.0)",
    "psycopg2-binary (>=2.9.12,<3.0.0)",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.poetry]
package-mode = false